Added clickable button(s) for Qt widgets.
This involved setting up CMake to handle Qt's moc file generation, which now enables using Q_OBJECT and slots in the widgets.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,10 @@ file(GLOB   gui_SRC        "src/gui/*.cpp")
 file(GLOB   spectrum_SRC   "src/spectrum/*.cpp")
 file(GLOB   util_SRC       "src/util/*.cpp")
 
-# Add the test binary.
+# This is for Qt to allow using the Q_OBJECT macro.
+set(CMAKE_AUTOMOC TRUE)
+
+# Add the app binary.
 add_executable(
   HSIDataGenerator
   src/hsi_data_generator.cpp
