--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,9 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 file(GLOB SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/*")
 
 # Other source files:
-file(GLOB   gui_SRC        "src/gui/*.cpp")
-file(GLOB   image_SRC      "src/image/*.cpp")
-file(GLOB   spectrum_SRC   "src/spectrum/*.cpp")
-file(GLOB   util_SRC       "src/util/*.cpp")
+file(GLOB   gui_SRC    "src/gui/*.cpp")
+file(GLOB   hsi_SRC    "src/hsi/*.cpp")
+file(GLOB   util_SRC   "src/util/*.cpp")
 
 # This is for Qt to allow using the Q_OBJECT macro.
 set(CMAKE_AUTOMOC TRUE)
@@ -48,8 +47,7 @@ add_executable(
   HSIDataGenerator
   src/hsi_data_generator.cpp
   ${gui_SRC}
-  ${image_SRC}
-  ${spectrum_SRC}
+  ${hsi_SRC}
   ${util_SRC}
 )
 target_link_libraries(
